# CMakeLists for FT
if (CLASS STREQUAL "S")
        set( NX 64)
        set( NY 64)
        set( NZ 64)
        set( MAXDIM 64)
        set( NITER_DEFAULT 6)
    elseif(CLASS STREQUAL "W")
        set( NX 128)
        set( NY 128)
        set( NZ 32)
        set( MAXDIM 128)
        set( NITER_DEFAULT 6)
    elseif(CLASS STREQUAL "A")
        set( NX 256)
        set( NY 256)
        set( NZ 128)
        set( MAXDIM 256)
        set( NITER_DEFAULT 20)
    elseif(CLASS STREQUAL "B")
        set( NX 512)
        set( NY 256)
        set( NZ 256)
        set( MAXDIM 512)
        set( NITER_DEFAULT 20)
    elseif(CLASS STREQUAL "C")
        set( NX 512)
        set( NY 512)
        set( NZ 512)
        set( MAXDIM 512)
        set( NITER_DEFAULT 20)
endif ()
math(EXPR NTOTAL "${NX}*${NY}*${NZ}")

# Include directory for header file
include_directories(${CMAKE_CURRENT_BINARY_DIR})
# Create Configuration File
configure_file(npbparams.temp.hpp npbparams.hpp)
# EP Executable
add_executable(FT ft.cpp)
# Link with library common
target_link_libraries(FT common)